--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -440,6 +440,76 @@ PY
           test -f Justfile || { echo "Justfile missing"; exit 1; }
           just ci
 
+      - name: (web) Setup Node for apps/web
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        uses: actions/setup-node@5e221d4786ffb21088b21dfc9c80efb16b52cd3b # actions/setup-node@v4.0.2
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: |
+            apps/web/package-lock.json
+
+      - name: (web) Install deps
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        working-directory: apps/web
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            echo "::warning::package-lock.json fehlt – fallback auf npm install."
+            npm install
+          fi
+
+      - name: (web) Cache Playwright browsers
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        uses: actions/cache@13c3b5c0b52e77e8fa7b4e3d6a238602b25e9a3a # v4.0.2
+        with:
+          path: ~/.cache/ms-playwright
+          # Version ist in devDependency gepinnt (@playwright/test 1.55.1)
+          key: ${{ runner.os }}-ms-playwright-1.55.1
+          restore-keys: |
+            ${{ runner.os }}-ms-playwright-
+
+      - name: (web) Install Playwright browsers (with deps)
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        working-directory: apps/web
+        run: npm run test:setup
+
+      - name: (web) Build app (required for preview)
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        working-directory: apps/web
+        run: npm run build
+
+      - name: (web) Lint & typecheck & budget (guarded)
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        working-directory: apps/web
+        run: |
+          set -euo pipefail
+          npm run lint
+          npm run check:ci
+          if [ -f ../../ci/scripts/assert-web-budget.mjs ]; then
+            node ../../ci/scripts/assert-web-budget.mjs
+          else
+            echo "::notice::Budget-Script fehlt – übersprungen."
+          fi
+
+      - name: (web) Run Playwright tests (HTML + line reporter)
+        if: ${{ hashFiles('apps/web/package.json') != '' }}
+        env:
+          # Der Preview-Server wird vom Playwright webServer gestartet (siehe playwright.config.ts)
+          PLAYWRIGHT_SKIP_WEBSERVER: "0"
+        working-directory: apps/web
+        run: npm run test:ci
+
+      - name: Upload Playwright report (ignore missing)
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: apps/web/playwright-report
+          if-no-files-found: ignore
+          retention-days: 7
+
       - name: Show sccache stats
         if: ${{ hashFiles('**/Cargo.toml') != '' }}
         run: sccache --show-stats
@@ -451,6 +521,7 @@ PY
           name: ci-logs
           path: |
             **/target/**/*.log
+            apps/web/playwright-report/**
             ./**/*.log
             .runtime/**/*
             !**/node_modules/**
