--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -27,12 +27,13 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
+      # Für Core-Actions nutzen wir stabile Tags statt SHAs, um 404-Risiken zu vermeiden.
       - uses: actions/checkout@v4
       - name: Cache lychee URL state
-        uses: actions/cache@13c3b5c0b52e77e8fa7b4e3d6a238602b25e9a3a # actions/cache@v4.0.2 (pinned)
+        uses: actions/cache@v4
         with:
           path: ~/.cache/lychee
-          key: ${{ runner.os }}-lychee-${{ hashFiles('.lychee.toml', 'README.md', 'docs/**/*.md') }}
+          key: ${{ runner.os }}-lychee-${{ hashFiles('.lychee.toml', 'README.md', 'docs/**/*.md', 'contracts/**/*.md') }}
           restore-keys: |
             ${{ runner.os }}-lychee-
       - name: Run lychee on docs & README (uses .lychee.toml)
